// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.styled.tsx has background-color: darkblue 1`] = `
.c0 {
  width: auto;
  height: 40px;
  padding: 0 20px;
  background-color: darkblue;
  border-radius: 6px;
  font-weight: 500;
  font-size: 18px;
  line-height: 26px;
  color: white;
  border: none;
  margin: 0;
}

.c0:active {
  border: 1px solid gray;
}

<button
  className="c0"
/>
`;

exports[`Button.styled.tsx has maring 0 by default 1`] = `
.c0 {
  width: auto;
  height: 40px;
  padding: 0 20px;
  background-color: darkblue;
  border-radius: 6px;
  font-weight: 500;
  font-size: 18px;
  line-height: 26px;
  color: white;
  border: none;
  margin: 0;
}

.c0:active {
  border: 1px solid gray;
}

<button
  className="c0"
/>
`;

exports[`Button.styled.tsx takes arument {margin} 1`] = `
.c0 {
  width: auto;
  height: 40px;
  padding: 0 20px;
  background-color: darkblue;
  border-radius: 6px;
  font-weight: 500;
  font-size: 18px;
  line-height: 26px;
  color: white;
  border: none;
  margin: 0 10px;
}

.c0:active {
  border: 1px solid gray;
}

<button
  className="c0"
/>
`;
